fixed bug with the navbar not being aligned properly

--- a/ubuy/src/components/shared/header/Header.css
+++ b/ubuy/src/components/shared/header/Header.css
@@ -3,7 +3,7 @@ header {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  height: 100px;
+  min-height: 100px !important;
   align-items: center;
   padding-right: 50px;
   box-sizing: border-box;
@@ -32,9 +32,8 @@ header .navlist a {
 }
 
 header .navlist a:hover {
-  box-shadow: 0px 0px 5px 5px var(--text-primary);
-  -webkit-box-shadow: 0px 0px 5px 5px var(--text-primary);
-  -moz-box-shadow: 0px 0px 5px 5px var(--text-primary);
+  background-color: var(--text-primary);
+  color: var(--background-primary);
 }
 
 header .nav-menu-button {
